# DI3---Projet-C

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Projet2.cbp  Projet2.depend  Projet2.layout  README.md  instance.c  instance.h  main.c  object.c  object.h  parser.c  parser.h  results.url  stringUtils.c  stringUtils.h  valgrind  valgrindTest
MKP-Instances/: theBestBag.txt  theBestBag2.txt
Rapport/: Projet_2_S5_COUCHOUD_COLEAU.aux  Projet_2_S5_COUCHOUD_COLEAU.dvi  Projet_2_S5_COUCHOUD_COLEAU.out  Projet_2_S5_COUCHOUD_COLEAU.tex  Projet_2_S5_COUCHOUD_COLEAU.toc
Rapport/.texpadtmp/: Projet_2_S5_COUCHOUD_COLEAU.aux  Projet_2_S5_COUCHOUD_COLEAU.ilg  Projet_2_S5_COUCHOUD_COLEAU.out  Projet_2_S5_COUCHOUD_COLEAU.toc
Solutions/: test1_indirect_scheduler_0.txt  test1_indirect_scheduler_1.txt  test1_indirect_scheduler_2.txt  test1_indirect_scheduler_3.txt  test1_indirect_scheduler_4.txt
__MACOSX/: ._.git  ._.gitattributes  ._.gitignore  ._.travis.yml  ._CMakeLists.txt  ._MKP-Instances  ._Makefile  ._Projet2  ._Projet2.cbp  ._README.md  ._other  ._results.url  ._src  ._valgrind
__MACOSX/MKP-Instances/: ._BestResultsKnown.txt  ._README.txt  .__mknapcb1_res.txt  .__mknapcb2_res.txt  .__mknapcb3_res.txt  .__mknapcb4_res.txt  .__mknapcb5_res.txt  .__mknapcb6_res.txt  .__mknapcb7_res.txt  .__mknapcb8_res.txt  .__mknapcb9_res.txt  ._theBestBag.txt
__MACOSX/Projet2/: ._Projet2.layout
__MACOSX/other/: ._theBestBag.numbers
__MACOSX/src/: ._Makefile  ._bag.c  ._bag.h  ._bagUnit.c  ._bagUnit.h  ._heuristic.c  ._heuristic.h  ._heuristicUnit.c  ._heuristicUnit.h  ._instance.c  ._instance.h  ._instanceUnit.c  ._instanceUnit.h  ._item.c  ._item.h  ._itemUnit.c  ._itemUnit.h  ._main.c  ._mainKergosien.c  ._mainKergosien.h  ._mainUnit.c  ._mainUnit.h  ._metaheuristicLocal.c  ._metaheuristicLocal.h  ._methaheuristicTabou.c  ._methaheuristicTabou.h  ._parser.c  ._parser.h  ._parserUnit.c  ._parserUnit.h  ._scheduler.c  ._scheduler.h  ._schedulerUnit.c  ._schedulerUnit.h  ._solution.c  ._solution.h  ._solutionDirect.c  ._solutionDirect.h  ._solutionDirectUnit.c  ._solutionDirectUnit.h  (+6 more)
other/: theBestBag.numbers
src/: Makefile  bag.c  bag.h  bagUnit.c  bagUnit.h  heuristic.c  heuristic.h  heuristicUnit.c  instance.c  instance.h  instanceUnit.c  instanceUnit.h  item.c  item.h  itemUnit.c  itemUnit.h  main.c  mainKergosien.c  mainKergosien.h  mainUnit.c  mainUnit.h  metaheuristic.c  metaheuristic.h  metaheuristicGenetic.c  metaheuristicKaguya.c  metaheuristicKaguyaTemp.c  metaheuristicKaguyaTemp.cTemp  metaheuristicLocal.c  metaheuristicLocal.h  metaheuristicLocalUnit.c  metaheuristicLocalUnit.h  metaheuristicTabou.c  metaheuristicTabou.h  metaheuristicTabouUnit.c  methaheuristicTabou.c  methaheuristicTabou.h  object.c  object.h  objectUnit.c  objectUnit.h  (+26 more)
src/headers/: bag.h  heuristic.h  instance.h  item.h  mainKergosien.h  metaheuristicGenetic.h  metaheuristicKaguya.h  metaheuristicKaguyaTemp.hTemp  metaheuristicLocal.h  metaheuristicTabou.h  parser.h  scheduler.h  solution.h  solutionIndirect.h  utils.h
src/unit/: bagUnit.c  heuristicUnit.c  heuristicUnit.h  instanceUnit.c  instanceUnit.h  itemUnit.c  itemUnit.h  mainUnit.c  metaheuristicGeneticUnit.c  metaheuristicKaguyaUnit.c  metaheuristicLocalUnit.c  metaheuristicTabouUnit.c  parserUnit.c  parserUnit.h  schedulerUnit.c  solutionDirectUnit.c  solutionIndirectUnit.c  solutionUnit.c  unit.c
src/unit/headers/: metaheuristicGeneticUnit.h  metaheuristicKaguyaUnit.h  metaheuristicLocalUnit.h  metaheuristicTabouUnit.h  solutionDirectUnit.h  solutionIndirectUnit.h
